# megalochem

./: .CMakeLists.txt.swp  .devcontainer.json  .gitignore  CMakeLists.txt  README.md  disktensor.h  main.cpp  t1.txt  t2.txt  test.fpp  to_implement.txt
adc/: CMakeLists.txt  adc_amplitudes.cpp  adc_compute.cpp  adc_defaults.h  adc_diag.cpp  adc_init.cpp  adc_mvp.h  adc_mvp_aoriadc1.cpp  adc_mvp_aoriadc2.cpp  adc_mvp_riadc1.cpp  adc_ops.h  adc_ri_u1.h  adc_u1_base.h  adcmod.h
basis/: aug-cc-pv5z-jkfit.json  aug-cc-pv5z-ri.json  aug-cc-pv5z.json  aug-cc-pvdz-jkfit.json  aug-cc-pvdz-ri.json  aug-cc-pvdz-segopt.json  aug-cc-pvdz.json  aug-cc-pvqz-jkfit.json  aug-cc-pvqz-ri.json  aug-cc-pvqz.json  aug-cc-pvtz-jkfit.json  aug-cc-pvtz-ri.json  aug-cc-pvtz.json  aug-def2-svp-ri.json  cc-pv5z-jkfit.json  cc-pv5z-ri.json  cc-pvdz-jkfit.json  cc-pvdz-libint2-ri.json  cc-pvdz-libint2.json  cc-pvdz-min.json  cc-pvdz-ri.json  cc-pvdz-segopt.json  cc-pvdz.json  cc-pvqz-jkfit.json  cc-pvqz-ri.json  cc-pvtz-jkfit.json  cc-pvtz-ri.json  cc-pvtz-segopt.json  def2-svp-ri.json  def2-tzvp-ri.json  def2-tzvp.json  minao.json
bench/: C16.xyz  C24.xyz  C32.xyz  C4.xyz  C48.xyz  C64.xyz  C8.xyz  C80.xyz  C96.xyz  gen.sh  gly_1.xyz  template.in
dbcsrx/: CMakeLists.txt  dbcsr_btensor.hpp  dbcsr_common.tpp  dbcsr_conversions.hpp  dbcsr_matrix.tpp  dbcsr_matrix_ops.tpp  dbcsr_tensor.tpp  dbcsr_tensor_ops.tpp
desc/: CMakeLists.txt  basis.cpp  basis.h  io.cpp  io.h  molecule.cpp  molecule.h  options.h  wfn.h
docker/: Dockerfile
docs/: Home.md
examples/: gly_1.json  gly_2.json  gly_2.xyz  gly_4.json  gly_4.xyz  h2.json  h2o.json  met.json
fock/: CMakeLists.txt  fock_builder.cpp  fock_defaults.h  fockmod.h  jkbuilder.cpp  jkbuilder.h  jkcadf.cpp  jkcommon.cpp  jkdf.cpp  jkexact.cpp  jkpari.cpp
hf/: CMakeLists.txt  fock_builder.cpp  fock_builder.h  hfdefaults.h  hfdensity.h  hfdiag.h  hfdiagfock.cpp  hfguess.cpp  hfguess.h  hfmod.cpp  hfmod.h  hfscf.cpp
input/: CMakeLists.txt  reader.cpp  reader.h  (+1 more)
ints/: CMakeLists.txt  aofactory.cpp  aofactory.h  gentran.cpp  gentran.h  integrals.cpp  integrals.h  mofactory.cpp  mofactory.h  registry.h  screening.cpp  screening.h
math/laplace/: CMakeLists.txt  lap_data.cpp  lap_data.h  lap_func.cpp  lap_paraopt.cpp  lap_root.cpp  laplace.cpp  laplace.h  laplace_minimax_c.h
src/: .clang-format  CMakeLists.txt  git.hpp.in  main.cpp  megalochem.hpp  megalochem_driver.cpp  megalochem_driver.hpp
src/adc/: CMakeLists.txt  adc_compute.cpp  adc_defaults.h  adc_defaults.hpp  adc_diag.cpp  adc_init.cpp  adc_mvp.h  adc_mvp.hpp  adc_mvp.hpp.fypp  adc_mvp_aoriadc1.cpp  adc_mvp_aoriadc2.cpp  adc_mvp_common.cpp  adc_wfn.hpp  adcmod.h  adcmod.hpp
src/dbcsrx/: CMakeLists.txt  a.out  dbcsr.fypp  dbcsr_btensor.hpp  dbcsr_btensor.hpp.fypp  dbcsr_common.HPP  dbcsr_common.hpp  dbcsr_common.hpp.fypp  dbcsr_common.tpp  dbcsr_conversions.hpp  dbcsr_matrix.HPP  dbcsr_matrix.hpp  dbcsr_matrix.hpp.fypp  dbcsr_matrix.tpp  dbcsr_matrix_ops.hpp  dbcsr_matrix_ops.hpp.fypp  dbcsr_matrix_ops.tpp  dbcsr_tensor.hpp  dbcsr_tensor.hpp.fypp  dbcsr_tensor.tpp  dbcsr_tensor_ops.hpp  dbcsr_tensor_ops.hpp.fypp  dbcsr_tensor_ops.tpp  fortran_utils.F  fortran_utils.HPP  fortran_utils.f.fypp  fortran_utils.hpp.fypp  macro.py  n.cpp  p.cpp  ppdirs_arithmetic.hpp  ppdirs_functions.hpp  ppdirs_iterator.hpp  ppdirs_parameters.hpp  t.cpp  t.py
src/desc/: CMakeLists.txt  atom.h  atom.hpp  basis.cpp  basis.h  basis.hpp  molecule.cpp  molecule.h  molecule.hpp  molecule.hpp.fypp  options.hpp  wfn.h  wfn.hpp
src/fock/: CMakeLists.txt  fock_builder.cpp  fock_defaults.h  fock_defaults.hpp  fockmod.h  fockmod.hpp  jkbuilder.cpp  jkbuilder.h  jkbuilder.hpp  jkbuilder.hpp.fypp  jkcommon.cpp  jkdf.cpp  jkdf_robust.cpp  jkexact.cpp  jkpari.cpp  jkqr.cpp  jksparse.cpp
src/hf/: CMakeLists.txt  fock_builder.cpp  fock_builder.h  hf_wfn.h  hf_wfn.hpp  hfdefaults.h  hfdefaults.hpp  hfdiagfock.cpp  hfguess.cpp  hfmod.h  hfmod.hpp  hfscf.cpp
src/ints/: CMakeLists.txt  aofactory.cpp  aofactory.h  aofactory.hpp  aoloader.cpp  aoloader.h  aoloader.hpp  aoloader.hpp.fypp  fitting.cpp  fitting.h  fitting.hpp  fitting_pari.cpp  fitting_qr.cpp  gentran.cpp  gentran.h  integrals.cpp  integrals.h  integrals.hpp  registry.hpp  screening.cpp  screening.h  screening.hpp
src/io/: .valid_keys.hpp.swp  CMakeLists.txt  data_handler.cpp  data_handler.h  data_handler.hpp  io.cpp  io.h  io.hpp  molden.hpp  parser.cpp  parser.h  parser.hpp  reader.cpp  reader.h  valid_keys.h  valid_keys.hpp
src/locorb/: CMakeLists.txt  locorb.h  locorb.hpp  locorb_boys.cpp  locorb_chol.cpp  locorb_pao.cpp  moprintmod.cpp  moprintmod.hpp
src/math/laplace/: CMakeLists.txt  laplace.hpp  laplace_helper.hpp  minimax.cpp  minimax.hpp  minimax_maehly.cpp  minimax_paraopt.cpp  minimax_rddata.cpp  quadmath.hpp.in
src/math/laplace/src/: lap_rddata.F90  lap_rderror.F90  laplace_minimax.F90  laplace_minimax_c.F  test_laplace.F90
src/math/linalg/: CMakeLists.txt  LLT.cpp  LLT.hpp  SVD.cpp  SVD.h  SVD.hpp  newton_schulz.cpp  newton_schulz.hpp  orthogonalizer.cpp  orthogonalizer.hpp  piv_cd.cpp  piv_cd.h  piv_cd.hpp
src/math/other/: CMakeLists.txt  rcm.hpp
src/math/solvers/: CMakeLists.txt  davidson.h  davidson.hpp  diis.h  diis.hpp  hermitian_eigen_solver.cpp  hermitian_eigen_solver.h  hermitian_eigen_solver.hpp
src/mp/: CMakeLists.txt  mp_compute.cpp  mp_defaults.h  mp_defaults.hpp  mp_wfn.h  mp_wfn.hpp  mpmod.h  mpmod.hpp  z_builder.h  z_builder.hpp  z_builder.hpp.fypp  z_common.cpp  z_full.cpp  z_mem.cpp
src/utils/: a.out  constants.h  constants.hpp  ele_to_int.hpp  json.hpp  json_fwd.hpp  matplotlibcpp.hpp  matrix_plot.h  matrix_plot.hpp  megalochem.fypp  mpi_log.h  mpi_log.hpp  mpi_time.h  mpi_time.hpp  optional.hpp  params.hpp  pool.h  ppdirs.h  ppdirs.hpp  registry.h  registry.hpp  scheduler.h  scheduler.hpp  test.cpp  unique.h  unique.hpp
tensor/: CMakeLists.txt  batchtensor.h  dbcsr.fpp  dbcsr.fypp  dbcsr_common.tpp  dbcsr_conversions.h  dbcsr_conversions.hpp  dbcsr_matrix.tpp  dbcsr_matrix_ops.tpp  dbcsr_tensor.tpp  dbcsr_tensor_ops.tpp
(+64 files in other folders)
